tests/checker/diagnostics/0952_gadt_constructor_payload_bool_mismatch_10.ml.infer.expected
File "0952_gadt_constructor_payload_bool_mismatch_10.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0952_gadt_constructor_payload_bool_mismatch_10 is not a valid module name.

File "0952_gadt_constructor_payload_bool_mismatch_10.ml", line 5, characters 38-39:
5 | let _ : bool expr_kappa = EBool_kappa 9
                                          ^
Error: The constant 9 has type int but an expression was expected of type
         bool
